# open-worship

./: .gitignore  Cargo.toml  LICENSE  README.md  bible_download_path.json  build-linux.sh  build-mac-icons.sh  build-mac.sh  build-win.bat  build.rs  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  inno.iss  justfile  meson.build  meson.options  package.json  pnpm-lock.yaml  release-linux.yml  release-mac.yml  release-win.yml  rust-toolchain.toml  tailwind.config.js  task.md  tsconfig-check.sh  tsconfig.json  tsconfig.preload-primary.node.json  tsconfig.preload-secondary.node.json  tsconfig.web.primary.json  tsconfig.web.secondary.json
.cargo/: config.toml.in
.github/workflows/: release-linux.yml  release-mac.yml  release-win.yml  release.yml  rust.yml
build-aux/: bundle-macos.sh  copy-win-dll.sh  process_mac_dependencies.sh
data/: com.openworship.app.gschema.xml.in  meson.build
data/icons/: meson.build
data/resources/: bible.json  com.openworship.app.gschema.xml  com.openworship.app.xml  meson.build  resources.gresource.xml  style-dark.css  style.css
data/resources/ui/: app_menubar.ui  app_window.ui  app_window_macos.ui  background_list_item.ui  download_bible_page.ui  download_bible_window.ui  message_alert.ui  message_alert_editor.ui  message_alert_editor_window.ui  message_alert_viewer.ui  schedule_activity_viewer.ui  schedule_listitem.ui  search.ui  search_background.ui  search_presentation.ui  search_scripture.ui  search_song.ui  settings_window.ui
debian/: control.in  meson.build  postinst
docs/: GTK-INSTALLATION.md  dev-setup.md
gobject_macro/: Cargo.toml
gobject_macro/src/: lib.rs
gsettings_macro/: Cargo.toml
gsettings_macro/src/: lib.rs
open-worship-rs/: Cargo.toml  README.md  icons.toml
open-worship-rs/src/: dto.rs  main.rs  structs.rs  style.css
open-worship-rs/src/structs/: background_grid_list_item.rs  schedule_list_item.rs
open-worship-rs/src/widgets/: activity_screen.rs  live_activity_viewer.rs  mod.rs  preview_activity_viewer.rs  schedule_activity_viewer.rs  search.rs
open-worship-rs/src/widgets/preview_activity_viewer/: list_item.rs
open-worship-rs/src/widgets/search/: background.rs  scriptures.rs  songs.rs
open-worship-rs/src/widgets/search/songs/: list_item.rs
res/: meson.build  open-worship.tiff
res/linux/: com.openworship.app.desktop  com.openworship.app.desktop.in  com.openworship.app.metainfo.xml.in  com.openworship.app.service.in  meson.build  open-worship.desktop  openworship-autostart.desktop  openworship.desktop
res/linux/icons/: meson.build
res/macos/: Entitlements.plist  Info.plist  meson.build  open-worship.bundle  open-worship.icns  open-worship.sh  openworship.icns  openworship.sh  spec-aarch64-apple-darwin.json  spec-apple-darwin.json  spec-apple-darwin.json.in
res/windows/: inno.iss.in  meson.build
res/windows/wix/: bundle.wxs  open-worship.wxs  openworship.wxs
scripts/: deploy_macos.sh  mac_app_pack.sh  mac_app_path.sh
src/: app.rs  app_config.rs  application.rs  application_window.rs  config.rs  dto.rs  main.rs  meson.build  notepad.rs  services.rs  structs.rs  style.css  utils.rs  widgets.rs
src/db/: connection.rs  query.rs
src/db/sql/: bible_books.sql  initial_db.sql
src/main/: index.ts
src/main/db/: db.ts  index.ts  migrations.ts
src/main/db/migrations/: 1_create_song_table.sql  2_create_bible_table.sql
src/main/utils/: index.ts
src/parser/: parser.rs  tokenizer.rs
src/preload/: index.secondary.d.ts  index.ts  secondary.ts
src/preload/primary/: index.d.ts  index.ts
src/preload/secondary/: index.d.ts  index.ts
src/renderer/: index.html  secondary.html
src/renderer/src/general/components/: ScreenViewer.tsx
src/renderer/src/primary/: App.tsx  main.tsx
src/renderer/src/primary/components/: ActivityViewer.tsx  Versions.tsx
src/renderer/src/secondary/: App.tsx  main.tsx
src/renderer/src/secondary/assets/: main.css
src/services/: alert.rs  file_manager.rs  message_alert_manager.rs  mod.rs  openlyrics.rs  settings.rs  slide.rs  slide_manager.rs
src/structs/: activity_list_item.rs  background_grid_list_item.rs  integer_object.rs  schedule_list_item.rs
src/widgets/: activity_screen.rs  activity_viewer.rs  entry_combo.rs  extended_screen.rs  group_toggle_button.rs  live_activity_viewer.rs  message_alert.rs  message_alert_editor.rs  message_alert_editor_window.rs  message_alert_viewer.rs  message_alert_wrapper.rs  preview_activity_viewer.rs  schedule_activity_viewer.rs  search.rs  settings.rs  settings_window.rs  stream_wrapper.rs  util.rs
src/widgets/canvas/: canvas.rs  canvas_grid.rs  canvas_item.rs  grabber.rs  image_item.rs  mod.rs  serialise.rs  text_item.rs
src/widgets/schedule_activity_viewer/: mod.rs  schedule_list_item.rs
src/widgets/search/: background.rs  presentation.rs  scriptures.rs  songs.rs
src/widgets/search/presentation/: presentation_listitem.rs
src/widgets/search/scriptures/: download.rs  list_item.rs
src/widgets/search/scriptures/download/: download_list_item.rs  download_modal.rs  download_page.rs  utils.rs
src/widgets/search/songs/: edit_modal.rs  edit_modal_list_item.rs  list_item.rs  song_editor_toolbar.rs  toolbar.rs
src/widgets/search/songs/toolbar/: canvas_toolbar.rs  song_editor_toolbar.rs  text_toolbar.rs
