[package]
name = "openworship"
description = "Openworship is a free and open-source worship presentation software designed to help churches plan and lead worship service"
license = "MIT"
version = "0.0.1"
authors = ["Micah Effiong <micaiah.effiong@gmail.com>"]
repository = "https://github.com/micaiah-effiong/open-worship"
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.deb]
section = "net"
assets = [
    # ["res/linux/openworship-autostart.desktop", "/etc/xdg/autostart/com.openworship.app.desktop", "644"],
    ["target/release/openworship", "/usr/bin/openworship", "755"],
    # Name must match application ID or else it has a strange behavior
    ["res/linux/com.openworship.app.desktop", "/usr/share/applications/com.openworship.app.desktop", "644"],
    ["res/linux/openworship.png", "/usr/share/icons/hicolor/256x256/apps/openworship.png", "644"],
]

[package.metadata.deb.variants.modern]
name = "openworship"
merge-assets.append = [
    ["target/release/openworship-modern", "/usr/bin/openworship-modern", "755"],
]

[package.metadata.winres]
ProductName = "Openworship"

[package.metadata.wix]
# Custom location to keep the root of the project cleaner
include = ["res/windows/wix/openworship.wxs"]

[dependencies]
dirs = "5.0.1"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = ["json","stream"] }
futures-util = "0.3.31"
pangocairo = "0.20"
gtk = { version = "0.10", features = ["v4_18"], package = "gtk4" }
cairo-rs = { version = "0.21.2", features = ["png"] }
strum = "0.27"
strum_macros = "0.27"
gsettings-macro = "0.2.2"

[target.'cfg(windows)'.dependencies]
native-dialog = "0.7.0"
tracing-panic = "0.1.2"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = "0.19.2"


[build-dependencies]
glib-build-tools = "0.20.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.production]
inherits = "release"
lto = "fat"
