[package]
name = "openworship"
description = "Openworship is a free and open-source worship presentation software designed to help churches plan and lead worship service"
license = "MIT"
version = "0.0.1"
authors = ["Micah Effiong <micaiah.effiong@gmail.com>"]
repository = "https://github.com/micaiah-effiong/open-worship"
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.deb]
section = "net"
assets = [
    # ["res/linux/openworship-autostart.desktop", "/etc/xdg/autostart/com.openworship.app.desktop", "644"],
    ["target/release/openworship", "/usr/bin/", "755"],
    ["res/linux/com.openworship.app.desktop", "/usr/share/applications/", "644"],
    ["res/linux/openworship.png", "/usr/share/icons/hicolor/256x256/apps/", "644"],
    ["res/linux/application-x-openworship.png", "/usr/share/icons/hicolor/48x48/mimetypes/", "644"],
    ["data/com.openworship.app.gschema.xml", "/usr/share/glib-2.0/schemas/", "644"],
    ["data/com.openworship.app.xml", "/usr/share/mime/packages/com.openworship.app.xml", "644"],
]
maintainer-scripts = "debian/"

[package.metadata.deb.variants.modern]
name = "openworship"
merge-assets.append = [
    ["target/release/openworship-modern", "/usr/bin/openworship-modern", "755"],
]

[dependencies]
dirs = "5.0.1"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
futures-util = "0.3.31"
gtk = { version = "0.9.2", features = ["v4_14"], package = "gtk4" }
strum = "0.27"
strum_macros = "0.27"
# gsettings-macro = "0.2.2"
gsettings-macro = { path = "gsettings_macro" }
gobject_macro = { path = "gobject_macro" }
sha2 = "0.11.0"
hex = "0.4.3"
surf = "2.3.2"
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_7" ] }
pangocairo = "0.20.0"
regex = "1.12.3"
openlyrics = "0.1.1"
quick-xml = { version = "0.40.1", features = ["serialize"] }

[package.metadata.winres]
ProductName = "Openworship"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true

[build-dependencies]
glib-build-tools = "0.22.0"

# [build-dependencies]
# glib-build-tools = "0.21.0"
