[package]
name = "gsettings-macro"
version = "0.1.0"
description = "Macro for typesafe GSettings key access"
keywords = ["gtk", "gio", "glib", "gsettings", "macro"]
edition = "2024"
license = "MPL-2.0"
exclude = ["/.github/*", "/tests/*"]

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.39", features = ["serialize"] }
syn = "2.0"
deluxe = "0.5"

[dev-dependencies]
gio = "0.22"
serial_test = "3.2"
